--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,46 +7,61 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% block title %}{% endblock %}</title>
+
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="{{ static('css/main.css') }}">
+    <link rel="stylesheet" href="{{ static('bower_components/bootstrap/dist/css/bootstrap.css') }}">
 </head>
 <body>
-    <!--[if lt IE 7]>
-        <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-    <![endif]-->
-
+    <!-- Static navbar -->
+    <div class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project Duedahl</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">Default</a></li>
+            <li class="active"><a href="./">Static top</a></li>
+            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
     {% block body %}
     {% endblock %}
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
-
     <!-- build:js scripts/plugins.js -->
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-affix.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-alert.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-dropdown.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-tooltip.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-modal.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-transition.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-button.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-popover.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-typeahead.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-carousel.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-scrollspy.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-collapse.js') }}"></script>
-    <script src="{{ static('js/vendors/bootstrap/bootstrap-tab.js') }}"></script>
+    <script src="{{ static('bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
     <!-- endbuild -->
 </body>
 </html>
