--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<div class="container" style="margin-top:50px">
-    <div class="hero-unit">
-        <h1>Wotcha!</h1>
-        <p>You now have</p>
-        <ul>
-        	<li>A basic Flask app structure</li>
-            <li>HTML5 Boilerplate</li>
-            <li>Twitter Bootstrap</li>
-            <li>Twitter Bootstrap plugins</li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman (and @romain__berger :p )</h3>
-    </div>
-</div>
+
+<div class="container">
+
+  <!-- Main component for a primary marketing message or call to action -->
+  <div class="jumbotron">
+    <h1>Navbar example</h1>
+    <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+    <p>To see the difference between static and fixed top navbars, just scroll.</p>
+    <p>
+      <a class="btn btn-lg btn-primary" href="../../components/#navbar">View navbar docs &raquo;</a>
+    </p>
+  </div>
+
+</div> <!-- /container -->
+
 {% endblock %}
