--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="{{ static('css/main.css') }}">
     <link rel="stylesheet" href="{{ static('bower_components/bootstrap/dist/css/bootstrap.css') }}">
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
     <!-- Static navbar -->
@@ -31,32 +32,16 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="/pages">Sider</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li class="active"><a href="./">Static top</a></li>
-            <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+            <li><a href="/logout">Log ud</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
     {% block body %}
     {% endblock %}
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
 
