--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,16 +2,17 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h1>Sign In</h1>
-<form action="" method="post" name="login">
-    {{form.hidden_tag()}}
-    <p>
-        username:<br>
-        {{form.username(size=80)}}<br>
-        password:<br>
-        {{form.password(size=80)}}<br>
-    </p>
-    <p>{{form.remember_me}} Remember Me</p>
-    <p><input type="submit" value="Sign In"></p>
-</form>
+	<div class="container">
+
+		<form class="form-signin" method="post" name="login">
+			{{form.hidden_tag()}}
+			<h2 class="form-signin-heading">Adgangskontrol</h2>
+			{{form.username(size=80, placeholder="Email adresse", class="form-control")}}
+			{{form.password(size=80, placeholder="Password", class="form-control")}}
+			<label class="checkbox">
+				{{form.remember_me}} Husk Mig
+			</label>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Log ind</button>
+		</form>
+	</div>
 {% endblock %}
