add error message to page

--- a/app/templates/pages.html
+++ b/app/templates/pages.html
@@ -18,11 +18,11 @@
 		<div class="col-xs-12 col-sm-10">
 			<div class="jumbotron">
 				<form role="form">
-					<div class="form-group">
+					<div class="form-group" style="width: 810px;">
 						<label for="exampleInputEmail1">Facebook Site URL:</label>
 						<input type="facebook-site-url" class="form-control" disabled value="https://evening-tor-8212.herokuapp.com/" />
 					</div>
-					<div class="form-group">
+					<div class="form-group" style="width: 810px;">
 						<textarea class="ckeditor" name="editor1"></textarea>
 					</div>
 					<button type="submit" class="btn btn-default">Gem</button>
