--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{{ title  }}</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -27,15 +27,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project Duedahl</a>
+          <a class="navbar-brand" href="/">Project Duedahl</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="/pages">Sider</a></li>
+            <li><a href="/page/list">Sider</a></li>
+            <li><a href="/user/list">Bruger</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout">Log ud</a></li>
+            <li>
+                {% if current_user.is_authenticated() %}
+                    <a href="{{ url_for('logout') }}">Log ud</a>
+                {% else %}
+                    <a href="{{ url_for('login') }}">Log ind</a>
+                {% endif %}
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -43,13 +49,13 @@
     {% block body %}
     {% endblock %}
 	    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul>
-    {% for message in messages %}
-        <li>{{ message }} </li>
-    {% endfor %}
-    </ul>
-    {% endif %}
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }} </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     {% endwith %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ static('js/vendors/jquery-1.8.3.min.js') }}"><\/script>')</script>
